@@ -64,6 +64,12 @@ command. At least one nested <code>&lt;fileset&gt;</code> is required.</p>
     <td align="center" valign="top">No, default is <i>false</i></td>
   </tr>
   <tr>
+    <td valign="top">skipemptyfilesets</td>
+    <td valign="top">Don't run the command, if no source files have
+      been found.</td>
+    <td align="center" valign="top">No, default is <i>false</i></td>
+  </tr>
+  <tr>
     <td valign="top">parallel</td>
     <td valign="top">Run the command only once, appending all files as
       arguments. If false, command will be executed once for every file. 
